// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeEmptyString should return false for [ '' ] 1`] = `
"    
    expected should be an empty string.
    got: array
"
`;

exports[`testing toBeEmptyString should return false for 1 1`] = `
"    
    expected should be an empty string.
    got: number
"
`;

exports[`testing toBeEmptyString should return false for 4141 1`] = `
"    
    expected should be an empty string.
    got: expected.length == 4
"
`;

exports[`testing toBeEmptyString should return false for empty string when isNot true 1`] = `
"    
    expected should not be an empty string.
    got: expected.length == 0
"
`;
